Impl remote rule fallbacks (#11453)
* Adding RemoteRuleFallbackManager

* Update activateRemoteRules

* remove comments

* dont add rules twice

* apply suggestions from coderabbit