@@ -624,7 +624,7 @@ public class JLanguageTool {
   public void activateRemoteRules(List<RemoteRuleConfig> configs) throws IOException {
     // Apply A/B test filtering first - can affect which rules get enabled and thus disabled because of fallback settings
     List<String> activeAbTestsForUser = userConfig.getAbTest();
-    List<RemoteRuleConfig> selectedConfigsByABTest = configs.stream()
+    List<RemoteRuleConfig> selectedConfigsByUserSettings = configs.stream()
       .filter(config -> {
         if (!userConfig.isPremium() && config.isPremium()) {
           return false;
@@ -643,52 +643,31 @@ public class JLanguageTool {
         }
         return true;
       })
-      .collect(Collectors.toList());
+      .toList();
+
     List<RemoteRuleConfig> effectiveConfigs = new ArrayList<>();
 
     // Then, determine effective configurations based on user opt-in for third-party AI
     if (!userConfig.isOptInThirdPartyAI()) {
-      // User has opted out of third-party AI - exclude third-party AI rules and include their fallbacks
-      Map<String, RemoteRuleConfig> fallbackRules = new HashMap<>();
-      
-      // Collect all possible fallback rules
-      // use raw configs here, not filtered list to allow fallback activation independently of A/B test parameters
-      for (RemoteRuleConfig config : configs) {
-        if (!config.isUsingThirdPartyAI()) {
-          fallbackRules.put(config.getRuleId(), config);
-        }
-      }
-      
-      // Add non-third-party AI rules and fallbacks for third-party AI rules
-      for (RemoteRuleConfig config : selectedConfigsByABTest) {
+      for (RemoteRuleConfig config : selectedConfigsByUserSettings) {
         if (config.isUsingThirdPartyAI()) {
-          String fallbackId = config.getFallbackRuleId();
-          if (fallbackId != null && fallbackRules.containsKey(fallbackId)) {
-            effectiveConfigs.add(fallbackRules.get(fallbackId));
-          }
+          RemoteRuleConfig remoteRuleConfig = RemoteRuleFallbackManager.INSTANCE.getInhouseFallback(config.getRuleId());
+          if (remoteRuleConfig != null && !effectiveConfigs.contains(remoteRuleConfig)) {
+              effectiveConfigs.add(remoteRuleConfig);
+            }
         } else {
           effectiveConfigs.add(config);
         }
       }
     } else {
-      // User has opted in to third-party AI - include third-party AI rules and exclude their fallbacks
-      Set<String> excludedFallbacks = new HashSet<>();
-      
-      // Collect fallback rule IDs to exclude
-      for (RemoteRuleConfig config : selectedConfigsByABTest) {
+      for (RemoteRuleConfig config : selectedConfigsByUserSettings) {
         if (config.isUsingThirdPartyAI() && config.getFallbackRuleId() != null) {
-          excludedFallbacks.add(config.getFallbackRuleId());
+          disableRule(config.getFallbackRuleId());
         }
       }
-      
-      // Add all rules except excluded fallbacks
-      for (RemoteRuleConfig config : selectedConfigsByABTest) {
-        if (!excludedFallbacks.contains(config.getRuleId())) {
-          effectiveConfigs.add(config);
-        }
-      }
+      effectiveConfigs.addAll(selectedConfigsByUserSettings);
     }
-    
+
     // Apply trusted source filtering
     if (!userConfig.isTrustedSource()) {
       effectiveConfigs = effectiveConfigs.stream()
